--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.spring</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -49,9 +49,4 @@
             </plugin>
         </plugins>
     </build>
-
-
-  <scm>
-    <tag>pet-clinic-0.0.1</tag>
-  </scm>
 </project>
