--- a/pom.xml
+++ b/pom.xml
@@ -39,14 +39,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <goals>
-                        <goal>install</goal>
-                    </goals>
-                    <checkModificationExcludes>
-                        <checkModificationExclude>pom.xml</checkModificationExclude>
-                    </checkModificationExcludes>
+                    <goals>install</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <url>https://github.com/rodrigo-magalhaes/pet-clinic.git</url>
+        <!--<developerConnection>scm:git:git@github.com:rodrigo-magalhaes/pet-clinic.git</developerConnection>-->
+        <tag>HEAD</tag>
+    </scm>
 </project>
